# VibeNote

./: .clang-format  .clang-tidy  .flatpak-manifest.json  .gitignore  AGENT.md  CMakeLists.txt  CMakePresets.json  README.md  org.kde.vibenote.desktop  org.kde.vibenote.metainfo.xml  project_structure.txt  vibe-note-blueprint.json
android/: AndroidManifest.xml  build.gradle
app/: AGENT.md  CMakeLists.txt  CMakeLists.txt.bak  app.qrc  org.saphyre.VibeNote.desktop
app/icons/: AGENT.md
app/qml/: AGENT.md  DashboardPage.qml  Main.qml  OverlayWindow.qml
app/src/: AGENT.md  api_client.cpp  api_client.h  main.cpp  metrics_view.cpp  metrics_view.h  overlay_controller.cpp  overlay_controller.h  settings_store.cpp  settings_store.h
cmake/: AGENT.md  toolchains.cmake  warnings.cmake
daemon/: AGENT.md  CMakeLists.txt  openapi.yaml
daemon/src/: AGENT.md  config.cpp  config.h  gpu_guard.cpp  gpu_guard.h  http_server.cpp  http_server.cpp.bak  http_server.h  llama_client.cpp  llama_client.cpp.bak  llama_client.h  logging.cpp  logging.h  main.cpp  metrics.cpp  queue.cpp
daemon/src/capture/: AGENT.md  frame_diff.cpp  frame_diff.h  screencast_portal.cpp  screencast_portal.h
daemon/src/enrich/: AGENT.md  enrich_none.cpp  enrich_openai.cpp  enrich_secondary.cpp
daemon/src/exporters/: AGENT.md  export_csv.cpp  export_json.cpp  export_raw.cpp
daemon/src/ocr/: AGENT.md  ocr_engine.h  ocr_paddle.cpp  ocr_tesseract.cpp
daemon/src/store/: AGENT.md  schema.sql  sqlite_store.cpp  sqlite_store.h
daemon/src/windows/: AGENT.md  kwin_watcher.cpp
models/: AGENT.md
packaging/: AGENT.md
packaging/polkit/: AGENT.md  org.saphyre.vibenote.policy
packaging/systemd/: AGENT.md  vibed.service  vibemodel.service
scripts/: AGENT.md  bench.sh  build.sh  export-examples.sh  run-dev.sh  setup-arch.sh
src/: CMakeLists.txt  main.cpp  vibenoteapplication.cpp  vibenoteapplication.h  vibenoteconfig.kcfgc
src/qml/: Main.qml
src/settings/: CMakeLists.txt  VibeNoteConfigurationView.qml
tests/: AGENT.md
tests/app/: AGENT.md
tests/daemon/: AGENT.md  test_queue.cpp
tests/integration/: AGENT.md
